201905090
Add DVB-S2 pilots on/off
Improve DVB-S2 selection labelling
Add binaries for limesdr_dvb
Add initial code for Jetson control
Add user-configurable buttons
Enable update from other GitHub users' repos
Store user's previous config after upgrade

201904290
For repeater streaming, moved 12-hourly reboot from app to cron
Repeater stream processes killed before restarting stream after failure
Added menu alias to call console menu without typing path
Error-check and correct all DVB-S2 FEC selections in console menu
Fix LimeSDR reset after TX in console menu

201904200
LimeSDR reliability Improvements
Allow fractional MHz Transverter Offset
Lime FW Update checks or warns for internet connection
Contest number appearance improvement
Console menu improvements for Lime DVB-S2
Animated Test card resized for 7 inch display
LeanDVB Receive stability improvement
Correct update H264 error for older versions
Based on Stretch Lite 2019-04-08

201903250
Improve H264 Audio with LimeSDR
New scripts for network remote control from Windows
Upgrade LimeSuite to 19.01 (requires Lime FW upgrade)

201902250
Fix DVB-S2 FEC 1/4
Fix webcam streaming with H264 selected
Add console menus for DVB-S2, FECs and LimeGain
Enable delayed PTT for Lime from console and keyedTX
Set all SR lines high to indicate transmit with LimeSDR, not F-M board

201902072
Fix keyedTX bug

201902070
Automatic driver switch and reboot for 7 inch screen
C920 driver load after boot (can now co-exist with Pi Cam)
Reboot and Rotate function for 7 inch screen
Hardware ShutDown Button can be enabled from touch screen
Save to USB updated and available from touchscreen
Save settings to /boot added
Lime selection from Console
Lime Test Report from Touchscreen
Force Lime FW update added to touchscreen
Toggle force_pwm_open facility to enable TX after sound use
USB sync not disabled on initial install

201812290
Correct RPi PTT operation with LimeSDR
Tidy Menu buttons

201811300
Lime install by default