@@ -28,7 +28,7 @@ The preferred installation method only needs a Windows PC connected to the same 
 - Log in (user: pi, password: raspberry) then cut and paste the following code in, one line at a time:
 
 ```sh
-wget https://raw.githubusercontent.com/f4dvk/portsdown_DVK/master/install.sh
+wget https://raw.githubusercontent.com/f4dvk/portsdown/master/install.sh
 chmod +x install.sh
 ./install.sh
 ```
