@@ -2,7 +2,7 @@
 
 #set -x #Uncomment for testing
 
-# Version 201905090
+# Version 201906060
 
 ############# SET GLOBAL VARIABLES ####################
 
@@ -669,6 +669,11 @@ case "$MODE_OUTPUT" in
 
     BAND_GPIO=$(get_config_var expports $PCONFIGFILE)
 
+    # Allow for GPIOs in 16 - 31 range (direct setting)
+    if [ "$BAND_GPIO" -gt "15" ]; then
+      let BAND_GPIO=$BAND_GPIO-16
+    fi
+
     # CALCULATE FREQUENCY in Hz
     FREQ_OUTPUTHZ=`echo - | awk '{print '$FREQ_OUTPUT' * 1000000}'`
 
@@ -718,7 +723,7 @@ elif [ "$MODE_INPUT" == "CAM16MPEG-2" ] && [ "$BITRATE_VIDEO" -gt 500000 ]; then
   VIDEO_FPS=15
 else
   # Reduce video resolution at low bit rates
-  if [ "$BITRATE_VIDEO" -lt 150000 ]; then
+  if [ "$BITRATE_VIDEO" -lt 141000 ]; then
     VIDEO_WIDTH=160
     VIDEO_HEIGHT=140
   else
@@ -1393,8 +1398,8 @@ fi
       "COMPVID")
         : # Do nothing.  Mode does not work yet
       ;;
-      "LIMEMINI" | "LIMEUSB")
-        $PATHRPI"/dvb2iq" -i videots -s $SYMBOLRATE_K -f $FECNUM"/"$FECDEN \
+      "LIMEMINI" | "LIMEUSB") # did use dvb2iq, but dvb2iq2 might be better
+        $PATHRPI"/dvb2iq2" -i videots -s $SYMBOLRATE_K -f $FECNUM"/"$FECDEN \
           -r $UPSAMPLE -m $MODTYPE -c $CONSTLN $PILOTS $FRAMES \
            | sudo $PATHRPI"/limesdr_send" -f $FREQ_OUTPUTHZ -b 2.5e6 -s $SYMBOLRATE \
            -g $LIME_GAINF -p 0.05 -r $UPSAMPLE -l $LIMESENDBUF -e $BAND_GPIO &
@@ -1952,7 +1957,7 @@ case "$MODE_OUTPUT" in
     VIDEO_HEIGHT=720
   elif [ "$FORMAT" == "16:9" ]; then
     VIDEO_WIDTH=720
-    VIDEO_HEIGHT=405
+    VIDEO_HEIGHT=400 # was 405
   else  # SD
     if [ "$BITRATE_VIDEO" -lt 75000 ]; then
       VIDEO_WIDTH=160
@@ -2018,6 +2023,87 @@ case "$MODE_OUTPUT" in
         -t "$FREQ_OUTPUT"e6 -g $LIME_GAINF -q 1
 ENDSSH
       ) &
+      EOM
+          ;;
+          "JCAM")
+            # Write the assembled Jetson command to a temp file
+            /bin/cat <<EOM >$CMDFILE
+            (sshpass -p $JETSONPW ssh -o StrictHostKeyChecking=no $JETSONUSER@$JETSONIP 'bash -s' <<'ENDSSH'
+            cd ~/dvbsdr/scripts
+            gst-launch-1.0 -q nvarguscamerasrc \
+              '!' "video/x-raw(memory:NVMM),width=$VIDEO_WIDTH, height=$VIDEO_HEIGHT, format=(string)NV12,framerate=(fraction)25/1" \
+              '!' nvvidconv flip-method=2 '!' "video/x-raw(memory:NVMM), format=(string)I420" \
+              '!' nvvidconv '!' 'video/x-raw(memory:NVMM), width=(int)$VIDEO_WIDTH, height=(int)$VIDEO_HEIGHT, format=(string)I420' \
+              '!' omxh265enc control-rate=2 bitrate=$VIDEOBITRATE peak-bitrate=$VIDEOPEAKBITRATE preset-level=3 iframeinterval=100 \
+              '!' 'video/x-h265,stream-format=(string)byte-stream' '!' queue \
+              '!' mux. alsasrc device=hw:2 \
+              '!' 'audio/x-raw, format=S16LE, layout=interleaved, rate=48000, channels=1' '!' voaacenc bitrate=20000 \
+              '!' queue '!' mux. mpegtsmux alignment=7 name=mux '!' fdsink \
+            | ffmpeg -i - -ss 8 \
+              -c:v copy -max_delay 200000 -muxrate $BITRATE_TS \
+              -c:a copy -f mpegts \
+              -metadata service_provider="$CALL" -metadata service_name="$CALL" \
+              -mpegts_pmt_start_pid $PIDPMT -streamid 0:"$PIDVIDEO" -streamid 1:"$PIDAUDIO" - \
+            | ../bin/limesdr_dvb -s "$SYMBOLRATE_K"000 -f $FECNUM/$FECDEN -r $UPSAMPLE -m $MODTYPE -c $CONSTLN $PILOTS $FRAMES \
+              -t "$FREQ_OUTPUT"e6 -g $LIME_GAINF -q 1
+      ENDSSH
+            ) &
+      EOM
+          ;;
+          esac
+        ;;
+        "H264")
+          case "$MODE_INPUT" in
+          "JHDMI")
+            # Write the assembled Jetson command to a temp file
+            /bin/cat <<EOM >$CMDFILE
+            (sshpass -p $JETSONPW ssh -o StrictHostKeyChecking=no $JETSONUSER@$JETSONIP 'bash -s' <<'ENDSSH'
+            cd ~/dvbsdr/scripts
+            gst-launch-1.0 udpsrc address=$LKVUDP port=$LKVPORT \
+              '!' video/mpegts '!' tsdemux name=dem dem. '!' queue '!' h264parse '!' omxh264dec \
+              '!' nvvidconv \
+              '!' 'video/x-raw(memory:NVMM), width=(int)$VIDEO_WIDTH, height=(int)$VIDEO_HEIGHT, format=(string)I420' \
+              '!' omxh264enc vbv-size=15 control-rate=2 bitrate=$VIDEOBITRATE peak-bitrate=$VIDEOPEAKBITRATE \
+              insert-sps-pps=1 insert-vui=1 cabac-entropy-coding=1 preset-level=3 profile=8 iframeinterval=100 \
+              '!' 'video/x-h264, level=(string)4.1, stream-format=(string)byte-stream' '!' mux. dem. '!' queue \
+              '!' mpegaudioparse '!' avdec_mp2float '!' audioconvert '!' audioresample \
+              '!' 'audio/x-raw, format=S16LE, layout=interleaved, rate=48000, channels=1' '!' voaacenc bitrate=20000 \
+              '!' queue '!' mux. mpegtsmux alignment=7 name=mux '!' fdsink \
+            | ffmpeg -i - -ss 8 \
+              -c:v copy -max_delay 200000 -muxrate $BITRATE_TS \
+              -c:a copy -f mpegts \
+              -metadata service_provider="$CALL" -metadata service_name="$CALL" \
+              -mpegts_pmt_start_pid $PIDPMT -streamid 0:"$PIDVIDEO" -streamid 1:"$PIDAUDIO" - \
+            | ../bin/limesdr_dvb -s "$SYMBOLRATE_K"000 -f $FECNUM/$FECDEN -r $UPSAMPLE -m $MODTYPE -c $CONSTLN $PILOTS $FRAMES \
+              -t "$FREQ_OUTPUT"e6 -g $LIME_GAINF -q 1
+      ENDSSH
+            ) &
+      EOM
+          ;;
+          "JCAM")
+            # Write the assembled Jetson command to a temp file
+            /bin/cat <<EOM >$CMDFILE
+            (sshpass -p $JETSONPW ssh -o StrictHostKeyChecking=no $JETSONUSER@$JETSONIP 'bash -s' <<'ENDSSH'
+            cd ~/dvbsdr/scripts
+            gst-launch-1.0 -q nvarguscamerasrc \
+              '!' "video/x-raw(memory:NVMM),width=$VIDEO_WIDTH, height=$VIDEO_HEIGHT, format=(string)NV12,framerate=(fraction)25/1" \
+              '!' nvvidconv flip-method=2 '!' "video/x-raw(memory:NVMM), format=(string)I420" \
+              '!' nvvidconv '!' 'video/x-raw(memory:NVMM), width=(int)$VIDEO_WIDTH, height=(int)$VIDEO_HEIGHT, format=(string)I420' \
+              '!' omxh264enc vbv-size=15 control-rate=2 bitrate=$VIDEOBITRATE peak-bitrate=$VIDEOPEAKBITRATE \
+              insert-sps-pps=1 insert-vui=1 cabac-entropy-coding=1 preset-level=3 profile=8 iframeinterval=100 \
+              '!' 'video/x-h264, level=(string)4.1, stream-format=(string)byte-stream' '!' queue \
+              '!' mux. alsasrc device=hw:2 \
+              '!' 'audio/x-raw, format=S16LE, layout=interleaved, rate=48000, channels=1' '!' voaacenc bitrate=20000 \
+              '!' queue '!' mux. mpegtsmux alignment=7 name=mux '!' fdsink \
+            | ffmpeg -i - -ss 8 \
+              -c:v copy -max_delay 200000 -muxrate $BITRATE_TS \
+              -c:a copy -f mpegts \
+              -metadata service_provider="$CALL" -metadata service_name="$CALL" \
+              -mpegts_pmt_start_pid $PIDPMT -streamid 0:"$PIDVIDEO" -streamid 1:"$PIDAUDIO" - \
+            | ../bin/limesdr_dvb -s "$SYMBOLRATE_K"000 -f $FECNUM/$FECDEN -r $UPSAMPLE -m $MODTYPE -c $CONSTLN $PILOTS $FRAMES \
+              -t "$FREQ_OUTPUT"e6 -g $LIME_GAINF -q 1
+      ENDSSH
+            ) &
 EOM
     ;;
     esac
