@@ -8,8 +8,8 @@ band=d3
 labelofband=70_cm
 attenlevel=-10.0
 explevel=30
-limegain=90
-expports=3
+limegain=88
+expports=2
 rfpower=7
 analogcamname=auto
 analogcaminput=0
