@@ -8,7 +8,7 @@ band=d3
 labelofband=70_cm
 attenlevel=-10.0
 explevel=30
-limegain=70
+limegain=88
 expports=2
 rfpower=7
 analogcamname=auto
