@@ -1,8 +1,5 @@
 PATHSCRIPT=/home/pi/rpidatv/scripts
 CONFIGFILE=$PATHSCRIPT"/portsdown_config.txt"
-PATHRPI=/home/pi/rpidatv/bin
-PATHBIN="/home/pi/rpidatv/bin/"
-
 
 ############### PIN DEFINITION ###########"
 #button_0=GPIO 4 / Header 7
@@ -72,7 +69,7 @@ do_transmit()
 
         sleep 0.5
         sudo $PATHSCRIPT"/a.sh" >/dev/null 2>/dev/null &
-	$PATHSCRIPT"/lime_ptt.sh" &
+        $PATHSCRIPT"/lime_ptt.sh" &
         sleep 0.5
 }
 
@@ -94,10 +91,11 @@ do_refresh_config()
 
 do_process_button()
 {
-	     if [ `gpio -g read $button_SR` = 1 ]&&[ "$SYMBOLRATEK" != 333 ]&&[ "$FREQ" != 145.9 ] ; then
+	     if [ `gpio -g read $button_SR` = 1 ]&&[ "$SYMBOLRATEK" != 333 ]&&[ "$FREQ" != 145.9 ]&&[ "$FREQ" != 437 ] ; then
 
                         NEW_SR=333;
                         NEW_FEC=7;
+                        MOD=0;
 
                 set_config_var symbolrate "$NEW_SR" $CONFIGFILE
                 set_config_var fec "$NEW_FEC" $CONFIGFILE
@@ -106,10 +104,11 @@ do_process_button()
                 do_refresh_config
         fi
 
-        if [ `gpio -g read $button_SR` = 0 ]&&[ "$SYMBOLRATEK" != 250 ]&&[ "$FREQ" != 145.9 ] ; then
+        if [ `gpio -g read $button_SR` = 0 ]&&[ "$SYMBOLRATEK" != 250 ]&&[ "$FREQ" != 145.9 ]&&[ "$FREQ" != 437 ] ; then
 
                         NEW_SR=250;
                         NEW_FEC=1;
+                        MOD=0;
 
                 set_config_var symbolrate "$NEW_SR" $CONFIGFILE
                 set_config_var fec "$NEW_FEC" $CONFIGFILE
@@ -118,13 +117,33 @@ do_process_button()
                 do_refresh_config
         fi
 
-        if [ `gpio -g read $button_0` = 1 ]&&[ `gpio -g read $button_1` = 1 ]&&[ "$FREQ" != 437 ] ; then
+        if [ `gpio -g read $button_0` = 1 ]&&[ `gpio -g read $button_1` = 1 ]&&[ "$MOD" != 1 ]&&[ `gpio -g read $button_SR` = 1 ] ; then
 
                                 NEW_FREQ_OUTPUT=437;
                                 MODULATION=DVB-S;
+                                NEW_SR=333;
                                 FEC=7;
+                                MOD=1;
 
                 set_config_var freqoutput "$NEW_FREQ_OUTPUT" $CONFIGFILE
+                set_config_var symbolrate "$NEW_SR" $CONFIGFILE
+                set_config_var modulation "$MODULATION" $CONFIGFILE
+                set_config_var fec "$FEC" $CONFIGFILE
+
+                echo $NEW_FREQ_OUTPUT
+                do_refresh_config
+        fi
+
+        if [ `gpio -g read $button_0` = 1 ]&&[ `gpio -g read $button_1` = 1 ]&&[ "$MOD" != 4 ]&&[ `gpio -g read $button_SR` = 0 ] ; then
+
+                                NEW_FREQ_OUTPUT=437;
+                                MODULATION=DVB-S;
+                                NEW_SR=125;
+                                FEC=7;
+                                MOD=4;
+
+                set_config_var freqoutput "$NEW_FREQ_OUTPUT" $CONFIGFILE
+                set_config_var symbolrate "$NEW_SR" $CONFIGFILE
                 set_config_var modulation "$MODULATION" $CONFIGFILE
                 set_config_var fec "$FEC" $CONFIGFILE
 
@@ -136,8 +155,9 @@ do_process_button()
 
                                 NEW_FREQ_OUTPUT=145.9;
                                 NEW_SR=125;
-                                MODULATION=S2QPSK;
-                                FEC=91;
+                                MODULATION=DVB-S;
+                                FEC=7;
+                                MOD=0;
 
 
                 set_config_var freqoutput "$NEW_FREQ_OUTPUT" $CONFIGFILE
@@ -154,6 +174,7 @@ do_process_button()
                                 NEW_FREQ_OUTPUT=1255;
                                 MODULATION=DVB-S;
                                 FEC=7;
+                                MOD=0;
 
                 set_config_var freqoutput "$NEW_FREQ_OUTPUT" $CONFIGFILE
                 set_config_var modulation "$MODULATION" $CONFIGFILE
@@ -181,6 +202,7 @@ do_process_button()
 ##################### MAIN PROGRAM ##############
 
 do_refresh_config
+MOD=0;
 while true; do
 
         do_process_button
